fix alignment on callout button at narrow width

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -228,7 +228,7 @@ footer #footer-details .page-container {
         margin-bottom: 1.3em;
     }
     header #corner-logo {
-        margin: .5em .5em .5em 1em;
+        margin: .5em;
     }
     header #corner-logo img {
         width: 210px;
